Fix Routes & Swagger
