# Routes/UserRoute.js
@@ -1,0 +1,8 @@
+const UserController = require('../Controller/UserController');
+const router = require('express').Router();
+
+// Routes untuk Summarize
+router.post('/register', UserController.register);
+router.post('/login', UserController.login);
+
+module.exports = router;
