# routes.js
@@ -1,13 +1,0 @@
-const SummarizeController = require('./Controller/SummarizeController');
-const UserController = require('./Controller/UserController');
-const router = require('express').Router();
-const auth = require('./middleware/auth');
-
-// Routes untuk Summarize
-router.post('/addSummarize', SummarizeController.addSummarize);
-router.get('/getSummarize', auth, SummarizeController.getSummarize);
-router.get('/getSummarize/:id', auth, SummarizeController.getSummarizeByID);
-router.post('/register', UserController.register);
-router.post('/login', UserController.login);
-
-module.exports = router;
